WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281958
AudioSampleBufferCompressor shouldn't buffer 0.1s at all time
https://bugs.webkit.org/show_bug.cgi?id=281958
Summary
AudioSampleBufferCompressor shouldn't buffer 0.1s at all time
Jean-Yves Avenard [:jya]
Reported
2024-10-23 02:09:11 PDT
The latency of the AudioSampleBufferCompressor is 0.1s which is too high for the purpose of MediaRecorder and easily control proper interleaving between audio and video frames.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-23 02:09:33 PDT
<
rdar://problem/138465744
>
Jean-Yves Avenard [:jya]
Comment 2
2024-10-23 03:28:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35616
EWS
Comment 3
2024-10-24 19:18:47 PDT
Committed
285681@main
(de609bdd72dc): <
https://commits.webkit.org/285681@main
> Reviewed commits have been landed. Closing PR #35616 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug