AudioSampleBufferCompressor shouldn't buffer 0.1s at all time https://bugs.webkit.org/show_bug.cgi?id=281958 rdar://138465744

Reviewed by Jer Noble.

Have AudioSampleBufferCompressor always process all available frames and
output them as soon as possible.
When flushing, output all decoded frames, keeping the converter's internal
buffer so that it can continues where it left off.

It was previously possible to fully drain the encoder by calling finish, but
this would set the AudioConverter to EOF and it would no longer encode samples.
The AudioConverter can differentiate final EOF from just having processed all
content by returning a code other than noErr.

Add a drain() method that will output all data available, a method similar to
finish() but will reset the encoder so it can continue to be used.

Resuming will include samples that will get trimmed from the start upon decoding due to codec delay.

Simplify memory management by only ever using the AudioConverter to encode one packet at a time.
Following this change, the latency of the encoder goes from 0.1s to the duration of an audio frame only.

Covered by existing tests.

* Source/WebCore/PAL/pal/cf/AudioToolboxSoftLink.cpp:
* Source/WebCore/PAL/pal/cf/AudioToolboxSoftLink.h:
* Source/WebCore/platform/mediarecorder/cocoa/AudioSampleBufferCompressor.h:
* Source/WebCore/platform/mediarecorder/cocoa/AudioSampleBufferCompressor.mm:
(WebCore::AudioSampleBufferCompressor::AudioSampleBufferCompressor):
(WebCore::AudioSampleBufferCompressor::drain):
(WebCore::AudioSampleBufferCompressor::flushInternal):
(WebCore::AudioSampleBufferCompressor::initAudioConverterForSourceFormatDescription):
(WebCore::AudioSampleBufferCompressor::sampleBuffer): Rename method to enforce that it can only be used with one packet at a time.
(WebCore::AudioSampleBufferCompressor::provideSourceDataNumOutputPackets):
(WebCore::AudioSampleBufferCompressor::processSampleBuffers):
(WebCore::AudioSampleBufferCompressor::processSampleBuffer):
(WebCore::AudioSampleBufferCompressor::computeBufferSizeForAudioFormat): Deleted.
(WebCore::AudioSampleBufferCompressor::sampleBufferWithNumPackets): Deleted.
(WebCore::AudioSampleBufferCompressor::processSampleBuffersUntilLowWaterTime): Deleted.

Canonical link: https://commits.webkit.org/285681@main