Source/WebCore/platform/mediarecorder/cocoa/AudioSampleBufferCompressor.mm
@@ -32,6 +32,7 @@
 #include <AudioToolbox/AudioConverter.h>
 #include <AudioToolbox/AudioFormat.h>
 #include <Foundation/Foundation.h>
+#include <Foundation/NSValue.h>
 #include <algorithm>
 #include <pal/avfoundation/MediaTimeAVFoundation.h>
 #include <wtf/NativePromise.h>
@@ -40,7 +41,8 @@
 #import <pal/cf/AudioToolboxSoftLink.h>
 #import <pal/cf/CoreMediaSoftLink.h>
 
-#define LOW_WATER_TIME_IN_SECONDS 0.1
+// Error value we pass through the converter to signal that nothing has gone wrong during encoding and we're done processing the packet.
+constexpr uint32_t kNoMoreDataErr = 'MOAR';
 
 namespace WebCore {
 
@@ -54,7 +56,6 @@ RefPtr<AudioSampleBufferCompressor> AudioSampleBufferCompressor::create(CMBuffer
 
 AudioSampleBufferCompressor::AudioSampleBufferCompressor(AudioFormatID format)
     : m_serialDispatchQueue(WorkQueue::create("com.apple.AudioSampleBufferCompressor"_s))
-    , m_lowWaterTime(PAL::CMTimeMakeWithSeconds(LOW_WATER_TIME_IN_SECONDS, 1000))
     , m_currentNativePresentationTimeStamp(PAL::kCMTimeInvalid)
     , m_currentOutputPresentationTimeStamp(PAL::kCMTimeInvalid)
     , m_remainingPrimeDuration(PAL::kCMTimeInvalid)
@@ -94,6 +95,28 @@ bool AudioSampleBufferCompressor::initialize(CMBufferQueueTriggerCallback callba
     return true;
 }
 
+Ref<GenericPromise> AudioSampleBufferCompressor::drain()
+{
+    return invokeAsync(m_serialDispatchQueue, [weakThis = ThreadSafeWeakPtr { *this }, this] {
+        RefPtr protectedThis = weakThis.get();
+        if (!protectedThis)
+            return GenericPromise::createAndReject();
+
+        m_isDraining = true;
+        processSampleBuffers();
+        m_isDraining = false;
+
+        if (!m_converter)
+            return GenericPromise::createAndReject();
+
+        if (auto error = PAL::AudioConverterReset(m_converter)) {
+            RELEASE_LOG_ERROR(MediaStream, "AudioSampleBufferCompressor AudioConverterReset failed %d", error);
+            return GenericPromise::createAndReject();
+        }
+        return GenericPromise::createAndResolve();
+    });
+}
+
 Ref<GenericPromise> AudioSampleBufferCompressor::flushInternal(bool isFinished)
 {
     return invokeAsync(m_serialDispatchQueue, [weakThis = ThreadSafeWeakPtr { *this }, this, isFinished] {
@@ -101,16 +124,21 @@ Ref<GenericPromise> AudioSampleBufferCompressor::flushInternal(bool isFinished)
         if (!protectedThis)
             return GenericPromise::createAndReject();
 
-        if (!isFinished) {
-            // FIXME: we might want to compress not yet processed data (whose duration is at most LOW_WATER_TIME_IN_SECONDS).
-            return GenericPromise::createAndResolve();
+        m_isDraining = isFinished;
+        processSampleBuffers();
+        m_isDraining = false;
+
+        if (!m_converter)
+            return GenericPromise::createAndReject();
+
+        if (isFinished) {
+            m_isEncoding = false;
+
+            if (auto error = PAL::CMBufferQueueMarkEndOfData(m_outputBufferQueue.get())) {
+                RELEASE_LOG_ERROR(MediaStream, "AudioSampleBufferCompressor CMBufferQueueMarkEndOfData failed %d", error);
+                return GenericPromise::createAndReject();
+            }
         }
-
-        processSampleBuffersUntilLowWaterTime(PAL::kCMTimeInvalid);
-
-        auto error = PAL::CMBufferQueueMarkEndOfData(m_outputBufferQueue.get());
-        RELEASE_LOG_ERROR_IF(error, MediaStream, "AudioSampleBufferCompressor CMBufferQueueMarkEndOfData failed %d", error);
-        m_isEncoding = false;
         return GenericPromise::createAndResolve();
     });
 }
@@ -209,26 +237,15 @@ bool AudioSampleBufferCompressor::initAudioConverterForSourceFormatDescription(C
             RELEASE_LOG_ERROR(MediaStream, "AudioSampleBufferCompressor getting kAudioConverterPropertyMaximumOutputPacketSize failed with %d", error);
             return false;
         }
-    }
+    } else
+        m_maxOutputPacketSize = m_destinationFormat.mBytesPerPacket;
 
     cleanupInCaseOfError.release();
 
-    auto destinationBufferSize = computeBufferSizeForAudioFormat(m_destinationFormat, m_maxOutputPacketSize, LOW_WATER_TIME_IN_SECONDS);
-    if (m_destinationBuffer.size() < destinationBufferSize)
-        m_destinationBuffer.grow(destinationBufferSize);
-    if (!m_destinationFormat.mBytesPerPacket)
-        m_destinationPacketDescriptions.resize(m_destinationBuffer.capacity() / m_maxOutputPacketSize);
+    if (m_destinationBuffer.size() < m_maxOutputPacketSize)
+        m_destinationBuffer.grow(m_maxOutputPacketSize);
 
     return true;
-}
-
-size_t AudioSampleBufferCompressor::computeBufferSizeForAudioFormat(AudioStreamBasicDescription format, UInt32 maxOutputPacketSize, Float32 duration)
-{
-    UInt32 numPackets = (format.mSampleRate * duration) / format.mFramesPerPacket;
-    UInt32 outputPacketSize = format.mBytesPerPacket ? format.mBytesPerPacket : maxOutputPacketSize;
-    UInt32 bufferSize = numPackets * outputPacketSize;
-
-    return bufferSize;
 }
 
 void AudioSampleBufferCompressor::attachPrimingTrimsIfNeeded(CMSampleBufferRef buffer)
@@ -285,7 +302,7 @@ RetainPtr<NSNumber> AudioSampleBufferCompressor::gradualDecoderRefreshCount()
     return retainPtr([NSNumber numberWithInt:(primeInfo.leadingFrames / m_destinationFormat.mFramesPerPacket)]);
 }
 
-RetainPtr<CMSampleBufferRef> AudioSampleBufferCompressor::sampleBufferWithNumPackets(UInt32 numPackets, AudioBufferList fillBufferList)
+RetainPtr<CMSampleBufferRef> AudioSampleBufferCompressor::sampleBuffer(AudioBufferList fillBufferList)
 {
     Vector<char> cookie;
     if (!m_destinationFormatDescription) {
@@ -326,7 +343,7 @@ RetainPtr<CMSampleBufferRef> AudioSampleBufferCompressor::sampleBufferWithNumPac
     }
 
     CMSampleBufferRef rawSampleBuffer;
-    auto error = PAL::CMAudioSampleBufferCreateWithPacketDescriptions(kCFAllocatorDefault, buffer.get(), true, NULL, NULL, m_destinationFormatDescription.get(), numPackets, m_currentNativePresentationTimeStamp, m_destinationPacketDescriptions.data(), &rawSampleBuffer);
+    auto error = PAL::CMAudioSampleBufferCreateWithPacketDescriptions(kCFAllocatorDefault, buffer.get(), true, NULL, NULL, m_destinationFormatDescription.get(), 1, m_currentNativePresentationTimeStamp, &m_destinationPacketDescriptions, &rawSampleBuffer);
     if (error) {
         RELEASE_LOG_ERROR(MediaStream, "AudioSampleBufferCompressor CMAudioSampleBufferCreateWithPacketDescriptions failed with %d", error);
         return nil;
@@ -351,8 +368,15 @@ OSStatus AudioSampleBufferCompressor::provideSourceDataNumOutputPackets(UInt32* 
     if (packetDescriptionOut)
         *packetDescriptionOut = NULL;
 
-    const UInt32 numPacketsToCopy = *numOutputPacketsPtr;
-    size_t numBytesToCopy = (numPacketsToCopy * m_sourceFormat.mBytesPerPacket);
+    if (PAL::CMBufferQueueIsEmpty(m_inputBufferQueue.get()) && !m_isDraining && m_sampleBlockBufferSize <= m_currentOffsetInSampleBlockBuffer) {
+        m_sampleBlockBuffer = nullptr;
+        m_sampleBlockBufferSize = 0;
+        m_currentOffsetInSampleBlockBuffer = 0;
+        *numOutputPacketsPtr = 0;
+        return kNoMoreDataErr;
+    }
+
+    size_t numBytesToCopy = m_sourceFormat.mBytesPerPacket;
 
     if (audioBufferList->mNumberBuffers == 1) {
         size_t currentOffsetInSourceBuffer = 0;
@@ -462,7 +486,7 @@ OSStatus AudioSampleBufferCompressor::provideSourceDataNumOutputPackets(UInt32* 
     return noErr;
 }
 
-void AudioSampleBufferCompressor::processSampleBuffersUntilLowWaterTime(CMTime lowWaterTime)
+void AudioSampleBufferCompressor::processSampleBuffers()
 {
     using namespace PAL; // For CMTIME_COMPARE_INLINE
 
@@ -470,20 +494,20 @@ void AudioSampleBufferCompressor::processSampleBuffersUntilLowWaterTime(CMTime l
         if (CMBufferQueueIsEmpty(m_inputBufferQueue.get()))
             return;
 
-        auto buffer = (CMSampleBufferRef)(const_cast<void*>(CMBufferQueueGetHead(m_inputBufferQueue.get())));
+        RetainPtr buffer = (CMSampleBufferRef)(const_cast<void*>(CMBufferQueueGetHead(m_inputBufferQueue.get())));
         ASSERT(buffer);
 
-        m_currentNativePresentationTimeStamp = CMSampleBufferGetPresentationTimeStamp(buffer);
-        m_currentOutputPresentationTimeStamp = CMSampleBufferGetOutputPresentationTimeStamp(buffer);
+        m_currentNativePresentationTimeStamp = CMSampleBufferGetPresentationTimeStamp(buffer.get());
+        m_currentOutputPresentationTimeStamp = CMSampleBufferGetOutputPresentationTimeStamp(buffer.get());
 
-        auto formatDescription = CMSampleBufferGetFormatDescription(buffer);
-        if (!initAudioConverterForSourceFormatDescription(formatDescription, m_outputCodecType)) {
+        RetainPtr formatDescription = PAL::CMSampleBufferGetFormatDescription(buffer.get());
+        if (!initAudioConverterForSourceFormatDescription(formatDescription.get(), m_outputCodecType)) {
             // FIXME: Maybe we should error the media recorder if we are not able to get a correct converter.
             return;
         }
     }
 
-    while (CMTIME_IS_INVALID(lowWaterTime) || CMTIME_COMPARE_INLINE(lowWaterTime, <, CMBufferQueueGetDuration(m_inputBufferQueue.get()))) {
+    while (true) {
         AudioBufferList fillBufferList;
 
         fillBufferList.mNumberBuffers = 1;
@@ -491,11 +515,13 @@ void AudioSampleBufferCompressor::processSampleBuffersUntilLowWaterTime(CMTime l
         fillBufferList.mBuffers[0].mDataByteSize = (UInt32)m_destinationBuffer.capacity();
         fillBufferList.mBuffers[0].mData = m_destinationBuffer.data();
 
-        UInt32 outputPacketSize = m_destinationFormat.mBytesPerPacket ? m_destinationFormat.mBytesPerPacket : m_maxOutputPacketSize;
-        UInt32 numOutputPackets = (UInt32)m_destinationBuffer.capacity() / outputPacketSize;
+        UInt32 numOutputPackets = 1;
 
-        auto error = AudioConverterFillComplexBuffer(m_converter, audioConverterComplexInputDataProc, this, &numOutputPackets, &fillBufferList, m_destinationPacketDescriptions.data());
-        if (error) {
+        auto error = AudioConverterFillComplexBuffer(m_converter, audioConverterComplexInputDataProc, this, &numOutputPackets, &fillBufferList, &m_destinationPacketDescriptions);
+
+        bool hasNoMoreData = error == kNoMoreDataErr;
+
+        if (error && !hasNoMoreData) {
             RELEASE_LOG_ERROR(MediaStream, "AudioSampleBufferCompressor AudioConverterFillComplexBuffer failed with %d", error);
             return;
         }
@@ -503,7 +529,7 @@ void AudioSampleBufferCompressor::processSampleBuffersUntilLowWaterTime(CMTime l
         if (!numOutputPackets)
             break;
 
-        auto buffer = sampleBufferWithNumPackets(numOutputPackets, fillBufferList);
+        RetainPtr buffer = sampleBuffer(fillBufferList);
 
         attachPrimingTrimsIfNeeded(buffer.get());
 
@@ -524,6 +550,9 @@ void AudioSampleBufferCompressor::processSampleBuffersUntilLowWaterTime(CMTime l
             RELEASE_LOG_ERROR(MediaStream, "AudioSampleBufferCompressor CMBufferQueueEnqueue failed with %d", error);
             return;
         }
+
+        if (hasNoMoreData)
+            break;
     }
 }
 
@@ -532,7 +561,7 @@ void AudioSampleBufferCompressor::processSampleBuffer(CMSampleBufferRef buffer)
     auto error = PAL::CMBufferQueueEnqueue(m_inputBufferQueue.get(), buffer);
     RELEASE_LOG_ERROR_IF(error, MediaStream, "AudioSampleBufferCompressor CMBufferQueueEnqueue failed with %d", error);
 
-    processSampleBuffersUntilLowWaterTime(m_lowWaterTime);
+    processSampleBuffers();
 }
 
 void AudioSampleBufferCompressor::addSampleBuffer(CMSampleBufferRef buffer)
